syntax = "proto3";
package sales;

option go_package = "pb/sales;sales";
option java_package = "com.wiradata.erpapplication.sales";
option java_multiple_files = true;

import "sales/customer_message.proto";
import "sales/salesman_message.proto";

message Sales {
  string id = 1;
  string branch_id = 2;
  string branch_name = 3;
  Customer customer = 4;
  Salesman salesman = 5;
  string code = 6;
  string sales_date = 7;
  double price = 8;
  double additional_disc_amount = 9;
  float additional_disc_percentage = 10;
  double total_price = 11;
  string remark = 12;
  string created_at = 13;
  string created_by = 14;
  string updated_at = 15;
  string updated_by = 16;
  repeated SalesDetail details = 17;
}

message SalesDetail {
  string id = 1;
  string sales_id = 2;
  string product_id = 3;
  string product_code = 4;
  string product_name = 5;
  int32 quantity = 6;
  double price = 7;
  double disc_amount = 8;
  float disc_percentage = 9;
  double total_price = 10;
}