syntax = "proto3";
package sales;

option go_package = "pb/sales;sales";
option java_package = "com.wiradata.erpapplication.sales";
option java_multiple_files = true;

import "sales/sales_return_message.proto";
import "sales/generic_message.proto";

message ListSalesReturnRequest {
  Pagination pagination = 1;
  string branch_id = 2;
  string sales_id = 3;
}

message SalesReturnPaginationResponse {
  Pagination pagination = 1;
  string branch_id = 2;
  string sales_id = 3;
  uint32 count = 4;
}

message ListSalesReturnResponse {
  SalesReturnPaginationResponse pagination = 1;
  SalesReturn SalesReturn = 2; 
}

service SalesReturnService {
  rpc SalesReturnCreate(SalesReturn) returns (SalesReturn) {}
  rpc SalesReturnUpdate(SalesReturn) returns (SalesReturn) {}
  rpc SalesReturnView(Id) returns (SalesReturn) {}
  rpc SalesReturnList(ListSalesReturnRequest) returns (stream ListSalesReturnResponse) {}
}